# project-bridge

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_ai_provider.md
.github/workflows/: test.yml
app/: package-lock.json  package.json
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/lib/: types.ts
app/src/lib/components/: AnalysisForm.svelte  ExportView.svelte  RecommendationCard.svelte  SkillSection.svelte
app/src/routes/: +page.svelte
docs/: AI_SETUP.md  BACKLOG.md  CONTRIBUTING.md  DECISIONS.md  INSTRUCTIONS.md  SECURITY.md  TECHNICAL_SPEC.md
docs/schema/: analysis_output_v1.0.json  analysis_output_v1.1.json  analysis_output_v1.2.json
engine/: pyproject.toml  requirements.txt
engine/projectbridge/: cli.py  export.py  export_project.py  orchestrator.py  progress.py  schema.py  triage_client.py
engine/projectbridge/ai/: anthropic_provider.py  gemini_provider.py  no_ai.py  ollama_provider.py  openai_provider.py  provider.py
engine/projectbridge/ai/prompts/: analyze_context.txt  generate_project_spec.txt  generate_recommendations.txt
engine/projectbridge/analysis/: engine.py  experience.py  interview_topics.py  portfolio.py  taxonomy.py
engine/projectbridge/config/: settings.py
engine/projectbridge/input/: cache.py  detection_maps.py  github.py  job_description.py  job_url.py  keywords.py  resume.py  validation.py
engine/projectbridge/recommend/: engine.py  resources.py  resources.yaml  skill_features.py  skill_features.yaml  templates.py  templates.yaml
engine/tests/: conftest.py  test_ai_provider.py  test_analysis.py  test_anthropic_provider.py  test_cache.py  test_cli_provider.py  test_config.py  test_experience.py  test_export.py  test_export_project.py  test_gemini_provider.py  test_github.py  test_integration.py  test_interview_topics.py  test_job_description.py  test_job_url.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator_provider.py  test_portfolio.py  test_progress.py  test_resume.py  test_schema.py  test_templates.py  test_validation.py
scanner/: Cargo.toml
scanner/fixtures/monorepo/.github/workflows/: ci.yml
scanner/fixtures/node-react/: package.json
scanner/fixtures/node-react/src/: App.tsx  index.ts
scanner/fixtures/rust-actix/: Cargo.toml
scanner/fixtures/rust-actix/src/: main.rs
scanner/fixtures/simple-python/: pyproject.toml
scanner/src/: dependencies.rs  frameworks.rs  languages.rs  lib.rs  main.rs  output.rs  scan.rs  structures.rs
scanner/tests/: integration.rs
site_src/: ai-setup.md  backlog.md  contributing.md  decisions.md  security.md  technical-spec.md
