[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectbridge"
version = "0.1.0"
description = "AI-powered project management analysis engine"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.39.0"]

[project.scripts]
projectbridge = "projectbridge.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
