[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectbridge"
version = "0.1.0"
description = "AI-powered project management analysis engine"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.39.0"]
dev = ["ruff>=0.15.0", "pytest", "pre-commit"]

[project.scripts]
projectbridge = "projectbridge.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

# --- Ruff ---

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
