[package]
name = "pb-scan"
version = "0.1.0"
edition = "2021"
description = "Local repository scanner for ProjectBridge"
license = "MIT"

[[bin]]
name = "pb-scan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
